fix scrollbar issue

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -797,16 +797,20 @@ tbody > div {
     content-visibility: hidden;
   }
 }
-::-webkit-scrollbar {
-  width: 7px;
-  margin-left: 100px;
-}
 
-::-webkit-scrollbar-thumb {
-  background: rgba(161, 161, 161, 0.9);
-  border-radius: 9px;
-}
+@media (min-width: 600px){
 
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  ::-webkit-scrollbar {
+    width: 7px;
+    margin-left: 100px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgba(161, 161, 161, 0.9);
+    border-radius: 9px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
 }
